# covid19_school_closures

./: .gitattributes  .gitignore  README.md  pyproject.toml  req_frozen_win10.txt  requirements.txt
autumn/core/project/: timeseries.py
autumn/core/utils/: utils.py
autumn/model_features/: outputs.py  random_process.py  strains.py
autumn/projects/sm_covid2/common_school/: calibration.py  runner_tools.py
autumn/projects/sm_covid2/common_school/calibration_plots/: opti_plots.py
autumn/projects/sm_covid2/common_school/output_plots/: country_spec.py
autumn/settings/: folders.py
