[project]
name = "covid19_school_closures"
version = "1.0.0"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["autumn"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"



[tool.setuptools.package-data]
"autumn.data" = ["**/*.csv", "**/*.parquet", "**/*.json"]

[tool.black]
line-length = 100