[project]
name = "autumn"
version = "1.0.0"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["autumn"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"autumn.data" = ["**/*.csv", "**/*.parquet", "**/*.json"]

dependencies = [
    "summerepi2==1.2.9",
    "estival==0.4.4",
    "jax==0.4.24",
    "jaxlib==0.4.24",
    "matplotlib",
    "seaborn",
    "plotly",
    "numpy>=1.21.5",
    "pandas==1.4.1",
    "openpyxl",
    "pyDOE",
    "scipy==1.8.1",
    "networkx",
    "numpyro==0.10.1",
    "nevergrad==0.6.0",
    "pyarrow",
    "pyyaml",
    "pydantic==1.10.9
    "statsmodels"
]

[tool.black]
line-length = 100